@@ -163,6 +163,7 @@ JGLOBAL_TITLE="Title"
 JGLOBAL_UNCATEGORISED="Uncategorised"
 JGLOBAL_USE_GLOBAL="Use Global"
 JGLOBAL_USERNAME="User Name"
+JGLOBAL_VALIDATION_FORM_FAILED="Invalid form"
 JGLOBAL_YOU_MUST_LOGIN_FIRST="Please login first"
 
 JLIB_APPLICATION_ERROR_ACCESS_FORBIDDEN="Access forbidden"
